# codex-openai-server

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  codex_http.py  docker-compose.local.yaml  docker-compose.yaml  pyproject.toml
codex_openai_server/: __init__.py  __main__.py  codex_auth.py  codex_http.py  logging_utils.py  openai_server.py
tests/: test_chat_tool_translation.py  test_codex_http.py  test_logging_utils.py  test_openai_server.py
